# pikmin-mush

./: .gitattributes  .gitignore  CLAUDE_HANDOFF.md  DEPLOY_per_agent_pause.md  DESIGN_autoscan.md  DEV_HISTORY.md  HOOK_TARGETS.md  README.md  SECURITY.md  SPEC_GLOBAL_FLEET.md  SPEC_HEADLESS_SUPERVISOR.md  SPEC_ON_DEVICE_DISPLAY.md  SPEC_autoscan.md  WORKLOG.md  新文字文件.txt
.github/workflows/: security-ci.yml
module/: build-dual-abi.ps1  package-module.ps1
module/cpp/: And64InlineHook.cpp  CMakeLists.txt  game.h  hack.cpp  il2cpp_dump.cpp  il2cpp_dump.h  zygisk.hpp
module/cpp/xdl/: xdl.c
phone_agent/: EMULATOR_LAB.md  HEADLESS.md  README.md  action.sh  agent.sh  config.example  headless-agent.ps1  install-local-display.ps1  install-supervisor-task.ps1  local-display.sh  localvd-drain.c  module.prop  service.sh  supervisor.config.example.json  supervisor.ps1  uninstall.sh  windows-process-identity.ps1
phone_agent/tests/: deployment-hardening.tests.ps1  windows-process-identity.tests.ps1
radar/: radar.html  radar.py
scanner/: map.html  scanner.py  scanner_gui.py
site/: .env.example  .gitignore  package-lock.json  package.json  vite.config.ts
site/.openai/: hosting.json
site/app/: layout.tsx  page.tsx
site/db/: schema.ts
site/drizzle/: 0000_redundant_imperial_guard.sql  0001_quick_richard_fisk.sql  0002_closed_deadpool.sql  0003_fair_dragon_man.sql  0004_chubby_white_tiger.sql  0005_military_red_hulk.sql  0006_naive_triton.sql  0007_condemned_nekra.sql  0008_rich_mac_gargan.sql
site/lib/: cloud.ts  fleet.ts  metrics.ts  mushroom-policy.mjs  scans.ts  (+4 more)
(+38 files in other folders)
